kubernetes/apps/base/flux-system/addons/webhooks/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-webhook
  namespace: flux-system
spec:
  hostnames:
    - flux-webhook.themacdonald.house
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: https
